# osl-dynamics

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTION.md  LICENSE  LICENSE.txt  NiBabel.ipynb  README.md  README.rst  TASER.py  contribution.md  evaluate_main.py  file_counter.txt  fmrib_qsub.sh  high_pass_filter.ipynb  interactive.ipynb  main.py  main_training_search.py  misc.py  model_functions.py  plotting_functions.py  post_analysis.py  pyproject.toml  qsub.sh  requirements.txt  sbatch.sh  sbatch_gpu.sh  setup.cfg  setup.py  simulation_main.py  taser_functions.py
.github/workflows/: black.yml  check_black.yml  unittests.yml
doc/: Makefile  conf.py  development.rst  documentation.rst  faq.rst  getting_started.rst  index.rst  install.rst  requirements.txt  using_bmrc.rst
doc/models/: dynemo.rst  dyneste.rst  hive.rst  hmm.rst  mage.rst  mdynemo.rst
doc/parcellations/: aal116.rst  aal24.rst  aal78.rst  dk54.rst  dk68.rst  giles38.rst  giles39.rst  giles42.rst  glasser50.rst  glasser52.rst  index.rst  schaefer100.rst
doc/tutorials/: 0-1_meg_preprocessing.py  0-2_meg_batch_processing.py  0-2_opm_preprocessing.py  0-3_eeg_batch_processing.py  0-4_sign_flipping.py  1-1_data_loading.py  1-2_data_prepare_meg.py  1-3_data_prepare_fmri.py  1-4_data_time_delay_embedding.py  2-1_static_spectra_analysis.py  2-2_static_power_analysis.py  2-3_static_aec_analysis.py  3-1_sliding_window_analysis.py  3-2_hmm_training.py  3-3_dynemo_training.py  3-4_hmm_dynemo_get_inf_params.py  4-1_hmm_multitaper_spectra.py  4-2_hmm_plotting_meg_networks.py  4-3_hmm_summary_stats.py  4-4_hmm_fmri_dual_estimation.py  4-5_hmm_plotting_fmri_networks.py  5-1_dynemo_regression_spectra.py  5-2_dynemo_plotting_networks.py  5-3_dynemo_mixing_coefs.py  6-1_epoching_alpha.py  6-2_group_network_response.py  7-1_group_contrast.py  7-2_group_network_response.py  analysing_trained_models.py  basic_usage.py  data_loading.py  data_object.py  data_object_and_preparation.py  data_preparation.py  data_prepare_fmri.py  data_prepare_meg.py  data_time_delay_embedding.py  dynemo_long_range_dep_simulation.py  dynemo_minimal_code.py  dynemo_mixing_coef_analysis.py  (+32 more)
docs/: Makefile  api.rst  conf.py  development.rst  documentation.rst  index.rst  install.rst
docs/tutorials/: data_object.py
envs/: README.md  bmrc.yml  fsl.yml  hbaws.yml  linux.yml  m1_mac.yml  m2_mac.yml  mac.yml  osld-2.0-bmrc.yml  osld-2.0-hbaws.yml  osld-2.0.yml  osld-tf-cuda.yml  osld-tf-gpu.yml  osld-tf-macos.yml  osld-tf.yml  osld.yml
examples/: README.md  TASER_BFer.py  connectivity_plot.py  cov_init_random_sample.py  cov_init_single_subject.py  datasets_loading_preparation.py  debugging_fifty_five_subjects.py  debugging_forty_five_subjects.py  debugging_instability.py  debugging_observation_model1.py  debugging_observation_model2.py  debugging_one_subject.py  debugging_random_covariance_sample.py  debugging_simulation1.py  debugging_simulation2.py  debugging_simulation3.py  debugging_simulation4.py  debugging_simulation5.py  debugging_simulation6.py  debugging_simulation7.py  debugging_simulation8.py  debugging_simulation9.py  debugging_ten_subjects.py  dynemo_hmm_mvn.py  dynemo_long_range_dependencies1.py  dynemo_long_range_dependencies2.py  dynemo_meg_fixed_covariances.py  dynemo_meg_resting_state_full_pipeline.py  dynemo_obs_hsmm_mvn.py  dynemo_soft_mixing.py  dynest_hmm_mvn.py  example1.py  example2.py  example3.py  example4.py  example5.py  example_TASER_BFer.py  forty_five_subjects_example.py  gaussian_mixture_model.py  go_hsmm_mvn.py  (+92 more)
examples/analysis/: amplitude_envelope_maps.py  gmm.py  multitaper_spectra.py  natcomms18.py  partial_covariances.py  regression_spectra.py  summary_stats.py
examples/data/: prob_000.npy  state_000.npy
examples/decoding/: README.md  get_data.py  prediction_pipeline.py
examples/fMRI/: sage_ukb_full_pipeline.py
examples/fmri/: README.md
osl_dynamics/: __init__.py  array_ops.py  pipeline.py
rotation/: analysis.py  preprocessing.py  simulation.py  training.py  utils.py
tests/: conftest.py  test_array_ops.py  test_inference.py  test_misc.py  test_simulation.py  test_skeleton.py  tests_hmm.py  tests_preprocessing.py  tests_utils.py
yaml_lib/: config_HCP.yaml  config_simulation.yaml  config_train_prototype.yaml  config_train_test.yaml
(+767 files in other folders)
