# This is the configuration file for setuptools.

[metadata]
name = osl-dynamics
version = 1.1.2
description = Models for infering dynamics in neuroimaging data
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/OHBA-analysis/osl-dynamics
project_urls =
    Documentation = https://osl-dynamics.readthedocs.io/en/latest/

[options]
packages = osl_dynamics

[options.packages.find]
where = osl_dynamics

[options.package_data]
# include all files types when building the distribution
* = *

[build_sphinx]
source_dir = doc
build_dir = build/sphinx
