# This is the configuration file for setuptools.

[metadata]
name = osl-dynamics
version = 1.2.11
description = Models for infering dynamics in neuroimaging data
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/OHBA-analysis/osl-dynamics
project_urls =
    Documentation = https://osl-dynamics.readthedocs.io/en/latest/

[options]
install_requires =
    glmtools
    mat73
    matplotlib
    mne
    nibabel
    nilearn
    numba
    numpy
    pandas
    pyyaml
    pqdm
    scipy
    scikit-learn
    seaborn
    tabulate
    tqdm
packages =
    osl_dynamics
    osl_dynamics.analysis
    osl_dynamics.config_api
    osl_dynamics.data
    osl_dynamics.files
    osl_dynamics.files.mask
    osl_dynamics.files.parcellation
    osl_dynamics.files.scanner
    osl_dynamics.files.scanner.layouts
    osl_dynamics.files.scene
    osl_dynamics.inference
    osl_dynamics.models
    osl_dynamics.simulation
    osl_dynamics.utils

[options.packages.find]
where = osl_dynamics

[options.package_data]
# include all files types when building the distribution
* = *

[build_sphinx]
source_dir = doc
build_dir = build/sphinx

[options.entry_points]
console_scripts =
    osl-dynamics = osl_dynamics.config_api.pipeline:osl_dynamics_cli
