# This is the configuration file for setuptools.

[metadata]
name = osl-dynamics
version = 1.4.dev3
description = Models for infering dynamics in neuroimaging data
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/OHBA-analysis/osl-dynamics
project_urls =
    Documentation = https://osl-dynamics.readthedocs.io/en/latest/

[options]
install_requires =
    glmtools~=0.2.1
    mat73~=0.62
    matplotlib~=3.7.1
    mne~=1.3.1
    nibabel~=5.1.0
    nilearn~=0.10.2
    numba==0.58
    numpy~=1.23.5
    osfclient~=0.0.5
    pandas~=1.5.3
    pyyaml~=6.0.1
    pqdm~=0.2.0
    scipy~=1.10.1
    scikit-learn~=1.3.1
    seaborn~=0.13.0
    tabulate~=0.9.0
    tqdm~=4.66.1
packages =
    osl_dynamics
    osl_dynamics.analysis
    osl_dynamics.config_api
    osl_dynamics.data
    osl_dynamics.files
    osl_dynamics.files.mask
    osl_dynamics.files.parcellation
    osl_dynamics.files.scanner
    osl_dynamics.files.scanner.layouts
    osl_dynamics.files.scene
    osl_dynamics.inference
    osl_dynamics.models
    osl_dynamics.simulation
    osl_dynamics.utils

[options.packages.find]
where = osl_dynamics

[options.package_data]
# include all files types when building the distribution
* = *

[build_sphinx]
source_dir = doc
build_dir = build/sphinx

[options.entry_points]
console_scripts =
    osl-dynamics = osl_dynamics.config_api.pipeline:osl_dynamics_cli
